--- a/styles/globals.css
+++ b/styles/globals.css
@@ -205,8 +205,8 @@ img.gridImg {
   background-position: 30% 30%;
 }
 
-.muse2 {
-  background-image: url('https://res.cloudinary.com/tosin/image/upload/dpr_auto,f_auto,w_auto,q_auto/v1621806403/detrix/P1130201.jpg');
+.mariamcrew {
+  background-image: url('https://res.cloudinary.com/tosin/image/upload/v1646764728/detrix/MARIAM%202022/DSC02588.jpg');
   background-size: cover;
   min-height: 90vh;
   width: auto;
@@ -214,8 +214,8 @@ img.gridImg {
   background-position: 30% 20%;
 }
 
-.chichiCrew {
-  background-image: url('https://res.cloudinary.com/tosin/image/upload/dpr_auto,f_auto,w_auto,q_auto/v1624486898/detrix/IMG_5801_1.jpg');
+.mariam {
+  background-image: url('https://res.cloudinary.com/tosin/image/upload/v1646762627/detrix/MARIAM%202022/DSC01886.jpg');
   background-size: cover;
   min-height: 90vh;
   width: auto;
